# dvf_analyser

./: README.md  Untitled1.ipynb  data.json  dvf_get.ipynb  dvf_get.py  geo-dvf-extract.ipynb  immo_track.py  main.py  pyproject.toml
cog_ensemble_2025_csv/: v_canton_2025.csv  v_codes_extension_2025.csv  v_comer_2025.csv  v_commune_comer_2025.csv  v_commune_depuis_1943.csv  v_commune_outremer_depuis_1943.csv  v_mvt_commune_2025.csv  v_pays_et_territoire_depuis_1943.csv  v_pays_territoire_2025.csv  v_tom_depuis_1943.csv
